# api-proxy

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  run.sh  setup.cfg
.github/workflows/: lint-test.yml
src/: main.py
src/api_proxy/: config.py
src/api_proxy/adapters/gateway/: country.py  nationality.py
src/api_proxy/adapters/gateway/utils/: __init__.py
src/api_proxy/adapters/web/fastapi/: __init__.py  endpoints.py  errors.py  exceptions.py  logging.py
src/api_proxy/controllers/: __init__.py
src/api_proxy/entities/: country.py  gateway.py  nationality.py
src/api_proxy/usecases/: common.py  get_most_probable_nationality.py
tests/: conftest.py  test_main.py
tests/adapters/gateway/: test_country.py  test_nationality.py
tests/adapters/web/: conftest.py  test_app.py  test_route_get_most_probable_country.py
tests/controllers/: conftest.py  test_create_message.py  test_get_most_probable_country.py
tests/factories/: __init__.py
tests/usecases/: test_get_most_probable_nationality.py
